--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/adapter-node": "^5.3.1",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"eslint": "^9.18.0",
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@davidnet/svelte-ui": "^1.11.2",
+		"marked": "^16.2.1",
 		"svelte-dnd-action": "^0.9.65"
 	}
 }
