--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
+		"fmt": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
@@ -32,7 +32,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@davidnet/svelte-ui": "^1.12.2",
+		"@davidnet/svelte-ui": "^1.13.1",
 		"marked": "^16.2.1",
 		"svelte-dnd-action": "^0.9.65"
 	}
