--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,6 @@ services:
         ports:
             - "2001:3000"
         restart: unless-stopped
+        environment:
+            VITE_COMMIT_HASH: ${VITE_COMMIT_HASH}
+            VITE_COMMIT_URL: ${VITE_COMMIT_URL}
