--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"fmt": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"extract": "svelte-i18n extract \"src/**/*.svelte\" src/lib/i18n/lang/en.json"
+		"extract": "svelte-i18n extract \"src/**/*.svelte\" src/lib/i18n/lang/en.json",
+		"addbackground": "node ./meta/scripts/addBackground.js"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
